--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "postcss-loader": "2.0.8",
     "prismjs": "^1.15.0",
     "promise": "8.0.1",
+    "query-string": "^5.1.1",
     "raf": "3.4.0",
     "react": "^16.7.0",
     "react-codemirror2": "^5.1.0",
